# Adagio

./: .gitignore  BUILD_SUMMARY.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
macos-native/: README.md  project.yml
macos-native/Adagio/: Adagio.entitlements  Info.plist
macos-native/Adagio/App/: AdagioApp.swift  AppModel.swift  ContentView.swift
macos-native/Adagio/Features/: EditSheet.swift  LibraryView.swift  LiveWaveform.swift  PlayerBar.swift  RecordView.swift  SettingsView.swift  SplitView.swift  YouTubeView.swift
macos-native/Adagio/Models/: Recording.swift  Types.swift
macos-native/Adagio/Services/: AudioExporter.swift  AudioMixer.swift  AudioPlayer.swift  AudioRecorder.swift  Shell.swift  SilenceDetector.swift  Storage.swift  Support.swift  SystemAudioCapture.swift  ToolInstaller.swift  ToolLocator.swift  YouTubeService.swift
src/: ipc.ts  library.ts  main.ts  player.ts  record.ts  split.ts  styles.css  util.ts  youtube.ts
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio.rs  db.rs  lib.rs  main.rs  recorder.rs  tools.rs  youtube.rs
